--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+camb==1.3.6
 click==8.1.3
 colorama==0.4.6
 colossus==1.3.1
@@ -6,8 +7,10 @@ importlib-metadata==6.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+mpmath==1.2.1
 numpy==1.24.1
 scipy==1.10.0
 six==1.16.0
+sympy==1.11.1
 Werkzeug==2.2.2
 zipp==3.11.0
